@@ -1,0 +1,194 @@
+<!-- retain these comments for translator revision tracking -->
+<!-- $Id$ -->
+
+ <sect1 id="plip" arch="i386">
+ <title>Installing &debian; over Parallel Line IP (PLIP)</title>
+
+<para>
+
+This section explains how to install &debian; on a computer without
+Ethernet card, but with just a remote gateway computer attached via
+a Null-Modem cable (also called Null-Printer cable). The gateway
+computer should be connected to a network that has a Debian mirror
+on it (e.g. to the Internet).
+
+</para><para>
+
+In the example in this appendix we will set up a PLIP connection using
+a gateway connected to the Internet over a dial-up connection (ppp0).
+We will use IP addresses 192.168.0.1 and 192.168.0.2 for the PLIP
+interfaces on the target system and the source system respectively
+(these addresses should be unused within your network address space).
+
+</para><para>
+
+The PLIP connection set up during the installation will also be available
+after the reboot into the installed system (see <xref linkend="boot-new"/>).
+
+</para><para>
+
+Before you start, you will need to check the BIOS configuration (IO base
+address and IRQ) for the parallel ports of both the source and target
+systems. The most common values are <literal>io=0x378</literal>,
+<literal>irq=7</literal>.
+
+</para>
+
+  <sect2>
+  <title>Requirements</title>
+
+<itemizedlist>
+<listitem><para>
+
+A target computer, called <emphasis>target</emphasis>, where Debian will be
+installed.
+
+</para></listitem>
+<listitem><para>
+
+System installation media; see <xref linkend="installation-media"/>.
+
+</para></listitem>
+<listitem><para>
+
+Another computer connected to the Internet, called <emphasis>source</emphasis>,
+that will function as the gateway.
+
+</para></listitem>
+<listitem><para>
+
+A DB-25 Null-Modem cable. See the
+<ulink url="&url-plip-install-howto;">PLIP-Install-HOWTO</ulink> for more
+information on this cable and instructions how to make your own.
+
+</para></listitem>
+</itemizedlist>
+
+  </sect2>
+
+  <sect2>
+  <title>Setting up source</title>
+<para>
+
+The following shell script is a simple example of how to configure the
+source computer as a gateway to the Internet using ppp0.
+
+<informalexample><screen>
+#!/bin/sh
+
+# We remove running modules from kernel to avoid conflicts and to
+# reconfigure them manually.
+modprobe -r lp parport_pc
+modprobe parport_pc io=<replaceable>0x378</replaceable> irq=<replaceable>7</replaceable>
+modprobe plip
+
+# Configure the plip interface (plip0 for me, see dmesg | grep plip)
+ifconfig <replaceable>plip0 192.168.0.2</replaceable> pointopoint <replaceable>192.168.0.1</replaceable> netmask 255.255.255.255 up
+
+# Configure gateway
+modprobe iptable_nat
+iptables -t nat -A POSTROUTING -o <replaceable>ppp0</replaceable> -j MASQUERADE
+echo 1 > /proc/sys/net/ipv4/ip_forward
+</screen></informalexample>
+
+</para>
+  </sect2>
+
+  <sect2>
+  <title>Installing target</title>
+<para>
+
+Boot the installation media. The installation needs to be run in
+expert mode; enter <userinput>expert</userinput> at the boot prompt.
+Below are the answers that should be given during various stages of
+the installation.
+
+</para>
+
+<orderedlist>
+<listitem><para>
+
+<guimenuitem>Load installer components</guimenuitem>
+
+</para><para>
+
+Select the <userinput>plip-modules</userinput> option from the list; this
+will make the PLIP drivers available to the installation system.
+
+</para></listitem>
+<listitem><para>
+
+<guimenuitem>Detect network hardware</guimenuitem>
+
+</para>
+
+ <itemizedlist>
+ <listitem><para>
+
+If target <emphasis>does</emphasis> have a network card, a list of driver
+modules for detected cards will be shown. If you want to force &d-i; to
+use plip instead, you have to deselect all listed driver modules.
+Obviously, if target doesn't have a network card, the installer will not
+show this list.
+
+ </para></listitem>
+ <listitem><para>
+
+Prompt for module parameters: Yes
+
+ </para></listitem>
+ <listitem><para>
+
+Because no network card was detected/selected earlier, the installer will
+ask you to select a network driver module from a list.
+Select the <userinput>plip</userinput> module.
+
+ </para></listitem>
+ <listitem><para>
+
+Additional parameters for module parport_pc:
+<userinput><replaceable>io=0x378 irq=7</replaceable></userinput>
+
+ </para></listitem>
+ <listitem><para>
+
+Additional parameters for module plip: leave empty
+
+ </para></listitem>
+ </itemizedlist>
+
+</listitem>
+<listitem><para>
+
+<guimenuitem>Configure the network</guimenuitem>
+ 
+ <itemizedlist>
+ <listitem><para>
+
+Auto-configure network with DHCP: No
+
+ </para></listitem>
+ <listitem><para>
+
+IP address: <userinput><replaceable>192.168.0.1</replaceable></userinput>
+
+ </para></listitem>
+ <listitem><para>
+
+Point-to-point address:
+<userinput><replaceable>192.168.0.2</replaceable></userinput>
+
+ </para></listitem>
+ <listitem><para>
+
+Name server addresses: you can enter the same addresses used on
+source (see <filename>/etc/resolv.conf</filename>)
+
+ </para></listitem>
+ </itemizedlist>
+
+</para></listitem>
+</orderedlist>
+
+  </sect2>
+ </sect1>
