@@ -6,5 +6,6 @@
 &example-preseed.xml;
 &files.xml;
 &chroot-install.xml;
+&plip.xml;
 
 </appendix>
